# lemsplc

./: .gitignore  .project  .pydevproject  Procfile  README  lemsplc_parser.py  lemsplc_web.py  pyproject.toml  requirements.txt  setup.py
templates/: article.html  index.html
