[tool.poetry]
name = "lemsplc"
version = "1.0.0"
authors = "alex@corcoles.net"

[tool.poetry.dependencies]
python = ">3.5"
flask = {version = "^1.0",extras = ["web"]}
gunicorn = {version = "^19.9",extras = ["web"]}
pyquery = "^1.4"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
