[tool.poetry]
name = "lemsplc"
version = "1.0.0"
authors = ["alex@corcoles.net"]
description = ""

[tool.poetry.dependencies]
python = ">=3.8"
flask = {version = "^2.3.2",extras = ["web"]}
gunicorn = {version = "^21.2.0",extras = ["web"]}
pyquery = "^2.0.0"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
