[tool.poetry]
name = "lemsplc"
version = "1.0.0"
authors = ["Alex <alex@corcoles.net>"]
description = ""
packages = [
    { include = "lemsplc_parser.py" },
    { include = "lemsplc_web.py" },
]

[tool.poetry.dependencies]
python = ">=3.8"
flask = {version = "^3.0.1",extras = ["web"]}
gunicorn = {version = "^21.2.0",extras = ["web"]}
pyquery = "^2.0.0"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
